# mole-gul

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.claude/skills/changelog-generator/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/release-audit/: SKILL.md
.claude/skills/release-dry-run/: SKILL.md
.github/: WORKFLOWS.md
.github/workflows/: build.yml  ci.yml  release.yml  test.yml
docs/: CHANGELOG.md  DOCS_INDEX.md  README.md
mole-src/: README.md
mole-src/tests/: dev_extended.bats
phase0-validate/: Cargo.toml
phase0-validate/src/: main.rs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: analyze.rs  clean.rs  history.rs  installer.rs  lib.rs  optimize.rs  purge.rs  system_info.rs  uninstall.rs
src-tauri/src/mole/: mod.rs
src/components/Analyze/: index.tsx
src/components/Clean/: index.tsx
src/components/CompareChart/: index.tsx
src/components/Dashboard/: index.tsx
src/components/History/: index.tsx
src/components/Installer/: index.tsx
src/components/Optimize/: index.tsx
src/components/Purge/: index.tsx
src/components/Sidebar/: index.tsx
src/components/Uninstall/: index.tsx
src/components/charts/: BarChart.tsx  LineChart.tsx  PieChart.tsx  ProgressRing.tsx  Sunburst.tsx  Treemap.tsx  index.ts  theme.ts  (+1 more)
src/hooks/: useChartTheme.ts
src/i18n/: index.ts
src/lib/: chartUtils.ts  invoke.ts  safeListen.ts  useMoleCommand.ts
src/test/: i18n-test-utils.tsx
(+33 files in other folders)
