[package]
name = "mole-gui"
version = "0.3.0"
description = "Native macOS GUI for Mole system maintenance tool"
authors = ["Willie"]
edition = "2021"
license = "MIT"
repository = "https://github.com/WillieChan2015/mole-gui"
keywords = ["mole", "macos", "system", "maintenance", "gui"]
categories = ["gui", "macos"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mole_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
libc = "0.2"
trash = "5"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = ["NSWindow"] }
objc2-foundation = "0.3"

[dev-dependencies]
tempfile = "3"

